--- a/style.css
+++ b/style.css
@@ -4,24 +4,40 @@ button{
     width: 40px;
 }
 button:hover{
-    background-color: rgb(255, 0, 242);
+    background-color: rgb(167, 163, 166);
     cursor: pointer;
+    transition: box-shadow 0.4s ease-in-out;
 }
 table{
     border-radius: 1px;
 }
 
 .container {
-    width: 180px;
+    width: 182px;
+    border: 2px solid black;
+    padding-top: 13px;
+    padding-left: 5px;
+    background-color: rgb(101, 106, 136);
+    border-radius: 12px;
 }
 
 .display input {
-    width: 100%;
+    width: 93%;
     height: 30px;
     background-color: rgb(0, 255, 221);
+    padding-bottom: px;
 }
 
 .container {
     margin-right: auto;
     margin-left: auto;
+}
+.{
+    width: 100px;
+    height: 100px;
+    border: 1;
+    background-color: rgb(8, 8, 87);
+}
+body{
+    background-image: url(image.jpeg);
 }
